--- a/1-ping.yml
+++ b/1-ping.yml
@@ -1,5 +1,6 @@
 - name:  pining the server
   hosts: web
+  becomes: yes
   tasks:  #list of tasks/modules/collections
     - name: "pinging the server"
       ansible.builtin.ping:
