--- a/nginx.yml
+++ b/nginx.yml
@@ -6,3 +6,8 @@
     ansible.builtin.dnf:
       name: nginx
       state: latest
+  - name: run nginx
+    ansible.builtin.service:
+      name: nginx
+      state: started
+      enabled: yes
