--- a/nginx.yml
+++ b/nginx.yml
@@ -9,5 +9,6 @@
   - name: run nginx
     ansible.builtin.service:
       name: nginx
-      state: started
+      #state: started
+      state: stopped
       enabled: yes
