--- a/nginx.yml
+++ b/nginx.yml
@@ -10,5 +10,6 @@
     ansible.builtin.service:
       name: nginx
       #state: started
-      state: stopped
+      #state: stopped
+      state: restart
       enabled: yes
