--- a/nginx-automation.yml
+++ b/nginx-automation.yml
@@ -3,11 +3,11 @@
   become: yes
   tasks:
     -name: installing nginx
-     dnf:
-     name: nginx
-     state: started
-     enabled: yes
+     ansible.builtin.dnf:
+        name: nginx
+        state: started
+        enabled: yes
     -name: removing the default files
      ansible.builtin.file:
-     state: absent
-     path: /usr/share/nginx/html
+        state: absent
+        path: /usr/share/nginx/html
