--- a/nginx-automation.yml
+++ b/nginx-automation.yml
@@ -14,4 +14,5 @@
   - name: removing the default files
     ansible.builtin.file:
       state: absent
-      path: /usr/share/nginx/html
+      path: /usr/share/nginx/html/
+      with.items: "{{ cleanup.files }}"
