--- a/nginx-automation.yml
+++ b/nginx-automation.yml
@@ -1,6 +1,6 @@
 - name: nginx install start configure and restart
   hosts: web
-  register: cleanup
+  #register: cleanup
   become: yes
     tasks:
   - name: installing nginx
@@ -16,4 +16,7 @@
     ansible.builtin.file:
       state: absent
       path: /usr/share/nginx/html/
-      with.items: "{{ cleanup.files }}"
+      #with.items: "{{ cleanup.files }}"
+      register: out 
+  - debug:
+      var: out
