--- a/nginx-automation.yml
+++ b/nginx-automation.yml
@@ -1,6 +1,6 @@
 - name: nginx install start configure and restart
   hosts: web
-  register: cleanup
+  #register: cleanup
   become: yes
   tasks:
   - name: installing nginx
