--- a/nginx-automation.yml
+++ b/nginx-automation.yml
@@ -13,10 +13,17 @@
       state: started
       enabled: yes
   - name: removing the default files
-    ansible.builtin.file:
-      state: absent
+    file:
       path: /usr/share/nginx/html/
-      with.items: "{{ cleanup.files }}"
+      state: absent
+      with_items: "{{ out.files }}"
+  loop_control:
+    label: "{{ item.path }}"
+
+   # ansible.builtin.file:
+    #  state: absent
+      #path: /usr/share/nginx/html/
+     # with.items: "{{ cleanup.files }}"
       #register: out 
   - debug:
       var: out
