--- a/variable/play-level.yaml
+++ b/variable/play-level.yaml
@@ -8,4 +8,4 @@
   tasks:
     - name: Printing some information
       debug:
-        msg: "I am learning {{course}} in {{type}} from trainer {{name}} with {{duration}} of hours"
+        msg: I am learning {{course}} in {{type}} from trainer {{name}} with {{duration}} of hours
