--- a/variable/1-play-level.yaml
+++ b/variable/1-play-level.yaml
@@ -1,5 +1,5 @@
 - name: Play Level variable declaration
-  hosts: localshot
+  hosts: localhost
   tasks:
     - name: Printing the info
       debug:
