--- a/Practice/task-multi-level.yaml
+++ b/Practice/task-multi-level.yaml
@@ -3,9 +3,9 @@
   taks:
     - name: printing info
       vars:
-        name: Ansible
+        course: Ansible
         guide: shive
         type: online
         duration: 120
       debug:
-        msg: i am learning {{name}} from trainer {{guide}} by {{type}} with {{duration}} of hours
+        msg: i am learning {{course}} from trainer {{guide}} by {{type}} with {{duration}} of hours
