--- a/Practice/task-multi-level.yaml
+++ b/Practice/task-multi-level.yaml
@@ -1,11 +1,17 @@
 - name: mutiple task level
   hosts: localhost
+  vars:
+    course: Ansible
+    guide: shive
+    type: online
+    duration: 120
   tasks:
     - name: printing info
       vars:
-        course: Ansible
-        guide: shive
-        type: online
-        duration: 120
+        course: Terraform
+      debug:
+        msg: i am learning {{course}} from trainer {{guide}} by {{type}} with {{duration}} of hours
+
+    - name: printing info
       debug:
         msg: i am learning {{course}} from trainer {{guide}} by {{type}} with {{duration}} of hours
