--- a/prompt-variable.yaml
+++ b/prompt-variable.yaml
@@ -1,13 +1,13 @@
 - name: Variable value from prompt
   hosts: localhost
   vars_prompt:
-  - name:  username
+  - name:  USERNAME
     prompt: Enter your name
     private: false
-  - name: password
+  - name: PASSWORD  
     prompt: Enter your password    
     private: true
   tasks:
     - name: printing info
       debug:
-        msg: I am my name is {{username}} and my {{password}}
+        msg: I am my name is {{USERNAME}} and my password {{PASSWORD}}
