--- a/10-invertory-variable.yaml
+++ b/10-invertory-variable.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: printing info
       debug:
-        msg: I am Learning {{course}} from {{trainer}} with {{duration}} of hours
+        msg: I am Learning {{Course}} from {{Name}} with {{Duration}} of hours
