--- a/10-invertory-variable.yaml
+++ b/10-invertory-variable.yaml
@@ -5,5 +5,5 @@
     vars:
       Timings: "7:15 AM IST"
     debug: 
-      msg: "I am Learning {{Course}} from {{Name}} with {{Duration}} of hours
+      msg: "I am Learning {{Course}} from {{Name}} with {{Duration}} of hours and 
       timing are {{Timings}}"
