--- a/12-Vars-Preference.yaml
+++ b/12-Vars-Preference.yaml
@@ -4,7 +4,7 @@
     Name: Ramesh
     Wishes: Morning from Play Level
   vars_files:
-  -  vars_yaml    
+  -  vars.yaml    
   vars_prompt:
   - name: Wishes
     prompt: Enter your name
