--- a/12-Vars-Preference.yaml
+++ b/12-Vars-Preference.yaml
@@ -3,8 +3,8 @@
   vars:
     Name: Ramesh
     Wishes: Morning from Play Level
-  vars_files:
-  -  vars.yaml    
+  #vars_files:
+  #-  vars.yaml    
   #vars_prompt:
   #- name: Wishes
   #  prompt: Enter wishes
