--- a/12-Vars-Preference.yaml
+++ b/12-Vars-Preference.yaml
@@ -5,10 +5,10 @@
     Wishes: Morning from Play Level
   #vars_files:
   #-  vars.yaml    
-  #vars_prompt:
-  #- name: Wishes
-  #  prompt: Enter wishes
-  #  private: false
+  vars_prompt:
+  - name: Wishes
+    prompt: Enter wishes
+    private: false
   tasks:
     - name: checking Vars preferences
       #vars:
