--- a/12-Vars-Preference.yaml
+++ b/12-Vars-Preference.yaml
@@ -7,7 +7,7 @@
   #-  vars.yaml    
   vars_prompt:
   - name: Wishes
-    prompt: Enter wishes
+    prompt: Enter wishes from prompt level
     private: false
   tasks:
     - name: checking Vars preferences
