--- a/14-conditions.yaml
+++ b/14-conditions.yaml
@@ -4,4 +4,8 @@
   tasks:
     - name: Printin guser info
       ansible.builtin.command: id ram
-      ignore_errors: true
+      #ignore_errors: true
+    
+    - name: printing info
+      ansible.builtin.debug:
+        msg: "hello I am learning"
