--- a/14-conditions.yaml
+++ b/14-conditions.yaml
@@ -4,8 +4,13 @@
   tasks:
     - name: Printin guser info
       ansible.builtin.command: id ram
+      register: USER
       ignore_errors: true
     
     - name: printing info
       ansible.builtin.debug:
-        msg: "hello I am learning"
+        msg: "hello I am printing user inof: {{USER}}"
+
+    - name: printing info
+      ansible.builtin.debug:
+        msg: "hello I am learning" 
