--- a/14-conditions.yaml
+++ b/14-conditions.yaml
@@ -10,6 +10,10 @@
     - name: printing info
       ansible.builtin.debug:
         msg: "hello I am printing user inof: {{USER}}"
+    
+    - name: Creating user if not there
+      ansible.builtin.command: useradd ram
+      when: USER.rc != 0 #condition
 
     - name: printing info
       ansible.builtin.debug:
