--- a/Practice/nginx.yaml
+++ b/Practice/nginx.yaml
@@ -6,7 +6,19 @@
       dnf:  
         name: nginx 
         state: latest
+
     - name: startg nginx
       service:
         name: nginx
         state: started
+
+    - name: startg nginx
+      service:
+        name: nginx
+        state: started     
+    - name: removing the default files
+      ansible.builtin.command: rm /usr/share/nginx/html/*
+      register: remove
+    - name: checking the rm command results
+      debug:
+        msg: {{remove}}
