--- a/Practice/nginx.yaml
+++ b/Practice/nginx.yaml
@@ -17,6 +17,6 @@
 #      register: remove
     - name:  removing the default files
       ansible.builtin.file:
-        path: /usr/share/nginx/html/
+        path: /usr/share/nginx/html/"{{ item.path }}"
         state: absent
-
+        with_items: "{{ directory_content_result.files }}"
