--- a/Practice/2nd-time/2-override-variables.yaml
+++ b/Practice/2nd-time/2-override-variables.yaml
@@ -11,6 +11,6 @@
     
     - name: override Variables
       vars:
-        Occupation: Devops
+        Occupation: "Devops Engineer"
       debug:
-        msg: "My Name is {{Name}}, having {{Age}} years and working an {{Occupation}}"
+        msg: "My Name is {{Name}}, having {{Age}} years and working an {{Occupation}} "
