--- a/Practice/2nd-time/inventory.ini
+++ b/Practice/2nd-time/inventory.ini
@@ -2,6 +2,6 @@
 localhost
 
 [localhost:vars]
-Name: Ramesh
-Age: 32
-Occupation: Devop Engineer
+Name: "Ramesh"
+Age: "32"
+Occupation: "Devop Engineer"
