--- a/Practice/2nd-time/6-prompt-level.yaml
+++ b/Practice/2nd-time/6-prompt-level.yaml
@@ -7,7 +7,7 @@
     prompt: Enter user age
   - occupation: WORK
     prompt: Enter user oaacupation
-  taks:
+  tasks:
     - name: Printing info from User Prompt
       debug:
         msg: "My Name is {{USERNAME}}, having {{USERAGE}} and working as a {{WORK}}"
