--- a/Practice/2nd-time/6-prompt-level.yaml
+++ b/Practice/2nd-time/6-prompt-level.yaml
@@ -1,11 +1,13 @@
 - name: Giving Variables from Prompt
-  hosts:
+  hosts: localhost
   vars_prompt:
   - name: USERNAME
     prompt: Please Enter your name
-  - age: USERAGE
+    private: false
+  - name: Age
     prompt: Enter user age
-  - occupation: WORK
+    private: true
+  - name: occupation
     prompt: Enter user oaacupation
   tasks:
     - name: Printing info from User Prompt
