--- a/Practice/2nd-time/inventory.ini
+++ b/Practice/2nd-time/inventory.ini
@@ -1,7 +1,7 @@
 [localhost]
 localhost
 
-#[localhost:vars]
-#Name: "Ramesh"
-##Age: "32"
-#Occupation: "Devop Engineer"
+[localhost:vars]
+Name="Ramesh"
+Age="32"
+Occupation="Devop Engineer"
