--- a/Practice/2nd-time/5-inventory-level.yaml
+++ b/Practice/2nd-time/5-inventory-level.yaml
@@ -2,5 +2,5 @@
   hosts: localhost
   tasks:
     - name: Printing Variable Info from inventory
-      debug:
+      ansible.builtin.debug:
         msg: "My Name is {{Name}}, I am {{Age}} years old and i am working an {{occupation}} "
