--- a/Practice/2nd-time/5-inventory-level.yaml
+++ b/Practice/2nd-time/5-inventory-level.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: Printing Variable Info from inventory
       ansible.builtin.debug:
-        msg: "My Name is {{Name}}, I am {{Age}} years old and i am working an {{occupation}} "
+        msg: "My Name is {{Name}}, I am {{Age}} years old and i am working an {{occupation}} with {{experience}} years experience "
