--- a/Practice/2nd-time/inventory.ini
+++ b/Practice/2nd-time/inventory.ini
@@ -4,5 +4,5 @@ localhost
 [localhost:vars]
 Name="Ramesh"
 Age="32"
-occupation="Devops Engineer"
+Occupation="DevOps Engineer from INVENTORY LEVEL"
 experience="8"
