--- a/Practice/2nd-time/8-Variable-referencce.yaml
+++ b/Practice/2nd-time/8-Variable-referencce.yaml
@@ -16,6 +16,6 @@
   tasks:
     - name: print the info 
       vars:
-        Occupation: DevOps Engineer from PLAY LEVEL
+        Occupation: DevOps Engineer from TASK LEVEL
       debug:
         msg: "MY Name is {{Name}}, i am {{Age}} years old and my profession is {{Occupation}} "
