--- a/Practice/2nd-time/files.yaml
+++ b/Practice/2nd-time/files.yaml
@@ -1,3 +1,3 @@
-Name: Ramesh
-Age: 32
-Occupation: DevOps Engineer from FILE LEVEL
+#Name: Ramesh
+#Age: 32
+#Occupation: DevOps Engineer from FILE LEVEL
