--- a/Practice/2nd-time/8-Variable-referencce.yaml
+++ b/Practice/2nd-time/8-Variable-referencce.yaml
@@ -4,8 +4,8 @@
     #Name: Ramesh
     #Age: 32
     #Occupation: DevOps Engineer from PLAY LEVEL
-  vars_files:
-  - files.yaml
+  #vars_files:
+  #- files.yaml
   #vars_prompt:
   #- name: Name
     #prompt: Enter your username
