--- a/Practice/2nd-time/10-conditions.yaml
+++ b/Practice/2nd-time/10-conditions.yaml
@@ -1,5 +1,6 @@
 - name: checking conditions
   hosts: localhost
+  become: yes
   tasks:
     - name: getting user info
       ansible.builtin.command: id ram
