--- a/15-functions.yaml
+++ b/15-functions.yaml
@@ -3,6 +3,7 @@
   vars_prompt:
   - name: number
     prompt: "Please enter number: "
+    private: no
   tasks:
     - name: number is lessthen 10
       debug:
