--- a/16.filters.yaml
+++ b/16.filters.yaml
@@ -26,7 +26,7 @@
 - name: remove duplicate number
   hosts: localhost
   vars:
-    numbers: [1, 2, 3, 4, 2, 1, 3, 7, 8, 9, 8, 7]
+    numbers: [1, 2, 3, 4, 2, 1, 3, 7, 8, 9, 8, 7, 5, 6]
   tasks:
     - name: Removing the duplicate numbers
       debug:
