--- a/inventory.yaml
+++ b/inventory.yaml
@@ -11,10 +11,10 @@
 localhost
 
 [localhost:vars]
-Course="Devops with AWS"
-Name="Shiva"
-Duration="120"
-Wishes="Morning from Inventory"
+#Course="Devops with AWS"
+#Name="Shiva"
+#Duration="120"
+#Wishes="Morning from Inventory"
 
 [app]
 172.31.81.183
