--- a/vars.yaml
+++ b/vars.yaml
@@ -1,4 +1,4 @@
-course: Ansible
-trainer: shiva
-duration: 120
-Wishes: Morning from file
+#course: Ansible
+#trainer: shiva
+#duration: 120
+#Wishes: Morning from file
