--- a/16.filters.yaml
+++ b/16.filters.yaml
@@ -59,10 +59,10 @@
   - name: convert Items to dictionary
     hosts: localhost
     vars:
-      my_list"
+      my_list:
       - { "key": "course", "value": "Ansible" },
 		  - { "key": "Trainer", "value": "shiva" },
-      -  { "key": "Duration", "value": "120hours" }\
+      - { "key": "Duration", "value": "120hours" }
     tasks:
     - name: before converting to Dictionary
       debug:
