--- a/16.filters.yaml
+++ b/16.filters.yaml
@@ -60,9 +60,13 @@
   hosts: localhost
   vars:
     my_list:
-    - { 'key': 'course', 'value': 'Ansible' }
-    - { 'key': 'Trainer', 'value': 'shiva' }
-    - { 'key': 'Duration', 'value': '120hours' }
+    #- { 'key': 'course', 'value': 'Ansible' }
+    #- { 'key': 'Trainer', 'value': 'shiva' }
+    #- { 'key': 'Duration', 'value': '120hours' }
+    - { "key": "course", "value": "Ansible" }
+		- { "key": "Trainer", "value": "shiva" }
+    - { "key": "Duration", "value": "120hours" }
+
   tasks:
     - name: before converting to Dictionary
       debug:
