--- a/16.filters.yaml
+++ b/16.filters.yaml
@@ -66,7 +66,7 @@
   tasks:
     - name: before converting to Dictionary
       debug:
-        msg: "{{ my_dictionary }}"
+        msg: "{{ my_list }}"
     - name: After converting to Dictionary
       debug:
         msg: "{{ my_list | items2dict }}"
