--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -15,7 +15,7 @@
   tasks:      
     - name: Installing the packages using loop
       dnf:
-        name: {{ item }}
+        name: "{{ item }}"
         state: latest
       loop:
       - nginx
