--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -28,9 +28,9 @@
   tasks:      
     - name: Installing the packages using loop
       dnf:
-        name: "{{item}}"
-        state: latest
+        name: "{{item.name }}"
+        state: "{{item.state}}"
       loop:
-      - { name: nginx, state: 'absent' }
-      - { name: tar, state: 'latest' }
-      - { name: gcc, state: 'latest' }
+      - { name: 'nginx', state: 'absent' }
+      - { name: 'tar', state: 'latest' }
+      - { name: 'gcc', state: 'latest' }
