--- a/Practice/inventory.ini
+++ b/Practice/inventory.ini
@@ -1,2 +1,23 @@
 [localhots]
 localhost
+
+[db]
+db.devopslearning2025.online
+
+172.31.81.182
+
+[web]
+54.82.56.88
+
+[localhost]
+localhost
+
+[app]
+172.31.81.183
+172.31.81.184
+172.31.81.185
+
+[all:children]
+web
+db
+app
